Fix responsive spacing issues

--- a/app/components/modules/work-history/content-sheet/style.module.scss
+++ b/app/components/modules/work-history/content-sheet/style.module.scss
@@ -2,9 +2,7 @@
 
 .content_sheet{
 	&__main{
-		@include break(tablet){
-			padding-top: $block-spacing--shallow;
-		}
+		padding-top: $block-spacing--shallow;
 	}
 	&_hidden{
 		display: none;
