--- a/app/components/modules/work-history/style.module.scss
+++ b/app/components/modules/work-history/style.module.scss
@@ -17,6 +17,7 @@
 		gap: 1rem;
 		flex-wrap: wrap;
 		flex-direction: row-reverse;
+		justify-content: flex-end;
 		width: 100%;
 		@include break(desktop-wider){
 			border-bottom: 1px solid var(--color-foreground);
@@ -79,16 +80,7 @@
 			.nav_item__title{
 				color: var(--color-foreground);
 				line-height: 1.2;
-				font-variation-settings: "ital" 0, "opsz" 10, "wght" 430;
-				:global(body.light-mode) &{
-					font-variation-settings: "ital" 0, "opsz" 10, "wght" 450;
-				}
-				@media print{
-					font-variation-settings: "ital" 0, "opsz" 10, "wght" 450;
-				}
-				@include break(desktop-wider){
-					font-size: responsiveSize(2.6, 10, 2.6);
-				}
+				@extend %text-heading-small;
 			}
 			.nav_item__dates{
 				color: var(--color-accent-alt);
